pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-115-indented_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/115-indented_code_blocks.md
---
]1337;SetMark\[1m[34m┄[0m[1m[34mHeading[0m


[33m[48;5;236mfoo[K[0m


]1337;SetMark\[1m[34m┄┄[0m[1m[34mHeading[0m


[33m[48;5;236mfoo[K[0m


[32m════════════════════════════════════════════════════════════════════════════════[0m
