pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-119-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/119-fenced_code_blocks.md
---

[33m<
[0m[33m >
[0m
